
2009年 08月 10日 星期一 20:14:27 CST
把libglade格式改成gtkbuilder格式，减少了libglademm的依赖

2009年 03月 27日 星期五 11:20:10 CST
发布了0.10,又再修补了几个bug，目前多兵的问题似乎解决了。还要等进一步测试

2009年 03月 24日 星期二 17:29:45 CST
修正一个炮位置的bug，增加了上/下一步时treeview的变化
添加了象眼软件里的转换棋谱函数，现在支持打开多种程序的棋谱格式，主要先将
它们转换成pgn再打开。看来这个月底可以发布一个版本，目前应该就是多兵的bug算是
严重的问题。

2009年 03月 22日 星期日 18:51:53 CST
继续修正着法的bug，刚修正马的着法的一个bug,po文件等基本准备好

2009年 03月 18日 星期三 22:44:12 CST
把eleeye引擎文件引进构建中

2009年 03月 17日 星期二 20:14:22 CST
把构建给搞定了,autoconf/automake 真是麻烦的东西

2009年 02月 26日 星期四 16:42:31 CST
中文纵线转iccs仍有bug，多兵在一纵线上没写，其它的士相的走也没测试。添加了界
面按钮，但获取最初界面那个也出了问题，问题一大堆啊

2009年 02月 25日 星期三 23:36:17 CST
很辛苦写的中文纵线转iccs，没完成不止，还出问题，特累人。而且可能还会有更多潜
在问题。哎。

2009年 02月 25日 星期三 11:44:00 CST
晕死，发现在中文纵线格式转化成iccs格式中特别麻烦，还要搞着法生成之类的，
因为要分清前中后的棋子类型，士相在同一位置中的辨别问题，马的走法问题等等。

2009年 02月 22日 星期日 01:36:08 CST
发现一个惊人的事实就是，memset设置内存的话，竟然有bug，出现过某位不为0的现象，
这是偶然还是啥？真是触目惊心啊。想想还是一个个给数组搞上0安全点
